<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:src="@mipmap/buser" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:padding="10dp">

            <TextView
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:text="@string/nameview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/row_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/krunal_gamit"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:text="@string/blood_group"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/row_bloodgroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="O+"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/row_cnum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/_918320255573"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/row_disease"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/vyara"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/last_donate"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lastdonate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/not_yet_donated"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>